refactor(jdk17): Reimplement RstConfiguration and RstOptions.